# haskell-guide

./: .gitignore  .hlint.yaml  README.md  haskell-guide.cabal  haskell-journey.cabal  index.html
docs/: index.html  optparse-applicative.html
exe/: GitHubPages.hs  Main.hs
pages/: index.md  optparse-applicative.md
