cabal-version: 2.2

name: haskell-guide
version: 2020

executable build_site
  build-depends: directory, pandoc, rio, shake, typed-process
  default-extensions:
    BlockArguments
    DeriveAnyClass DeriveGeneric
    NamedFieldPuns NoImplicitPrelude
    OverloadedStrings
    TypeFamilies
  default-language: Haskell2010
  hs-source-dirs: exe
  main-is: Main.hs
  other-modules: GitHubPages
