cabal-version: 2.2

name: haskell-journey
version: 2020

executable build_site
  build-depends: rio, pandoc, shake
  default-extensions:
    BlockArguments
    DeriveAnyClass DeriveGeneric
    NamedFieldPuns NoImplicitPrelude
    OverloadedStrings
    TypeFamilies
  default-language: Haskell2010
  hs-source-dirs: exe
  main-is: Main.hs
